Implementada toda la capa de persistencia:
1.- Entidades JPA

2.- Base de datos en script de flyway
